*****  Mo 17. Dez 14:49:54 CET 2018  *****

Added prompt_toolkit and pygments modules for fancy prompting.
Refactored loadfile() to process a multi-line string (as well as  files).
Edited banner to begin with a line break.
Added color syntax in remove_duplicates() dialogs.
Drafted add_entries() function to add entries manually.

*****

Implemented add_entries() to manually add entries though the prompt.
Refactored merge() to take list of Bib() objects as argument (optional).
Added color syntax to filter_field() dialog.
Added color syntax to merge() dialog.


*****  Di 18. Dez 15:27:46 CET 2018  *****

Implemented edit() to manually edit the bibmanager database.


*****  Fri Dec 21 19:46:20 CLT 2018  *****

Implemented search() to querry into bibmanager database by author,
year, or keywords in title.
Added documentation to Bib.__contains__().


*****  Sat Dec 22 10:03:49 CLT 2018  *****

Removed cond_replace() function. Use cond_find() with join() instead.

*****

Renamed cond_find() to cond_split().
Renamed cond_split() arguments from line,regex to text,pattern.

*****

Added ret_nests argument to cond_split(). When enabled, return the
nested level for the returned substrings.

*****
